# servarr-operator

./: .dockerignore  .editorconfig  .gitignore  .llmenv.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  entities.json  image-defaults.toml  mempalace.yaml  release.toml
.claude/: settings.json
.github/: renovate.json5
.github/smoke-test/: smoke-test.sh
.github/smoke-test/manifests/: admin-secret.yaml  bazarr.yaml  jackett.yaml  jellyfin.yaml  lidarr.yaml  maintainerr.yaml  media-stack.yaml  overseerr.yaml  plex.yaml  prowlarr.yaml  radarr.yaml  sabnzbd.yaml  sonarr-api-key-secret.yaml  sonarr.yaml  ssh-bastion.yaml  subgen.yaml  tautulli.yaml  transmission.yaml
.github/workflows/: _ci.yaml  _publish.yaml  ci.yaml  close-issues-release-merge.yaml  forward-merge-release.yml  release.yaml
.semgrep-out/: rust-p-rust.json  rust-p-rust.sarif  rust-p-secrets.json  rust-p-secrets.sarif  rust-p-security-audit.json  rust-p-security-audit.sarif
.tmp/: composite_body.md
charts/servarr-crds/: Chart.yaml  values.yaml
charts/servarr-crds/templates/: mediastack-crd.yaml  servarrapp-crd.yaml  validating-webhook-configuration.yaml
charts/servarr-operator/: Chart.yaml  values.yaml
charts/servarr-operator/templates/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  nodefeaturerules.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml  webhook-certificate.yaml  webhook-service.yaml  webhook-validating.yaml
crates/servarr-api/: Cargo.toml
crates/servarr-api/src/: bazarr.rs  client.rs  health.rs  jellyfin.rs  k8s.rs  lib.rs  maintainerr.rs  overseerr.rs  plex.rs  prowlarr.rs  sabnzbd.rs  servarr_v3.rs  tautulli.rs  transmission.rs
crates/servarr-api/tests/: api_tests.rs
crates/servarr-crds/: Cargo.toml  build.rs
crates/servarr-crds/src/: lib.rs
crates/servarr-crds/src/v1alpha1/: app_config.rs  defaults.rs  media_stack.rs  mod.rs  spec.rs  status.rs  types.rs
crates/servarr-crds/tests/: crd_tests.rs  defaults_tests.rs  media_stack_tests.rs  proptest_crd_types.rs  proptest_serde.rs  status_tests.rs
crates/servarr-operator/: Cargo.toml
crates/servarr-operator/src/: context.rs  controller.rs  lib.rs  main.rs  media_stack_controller.rs  metrics.rs  server.rs  telemetry.rs  webhook.rs
crates/servarr-operator/tests/: reconcile_tests.rs  tls_provider_test.rs
crates/servarr-resources/: Cargo.toml
crates/servarr-resources/src/: certificate.rs  common.rs  configmap.rs  deployment.rs  httproute.rs  lib.rs  networkpolicy.rs  nfs_server.rs  pvc.rs  secret.rs  service.rs  tcproute.rs
crates/servarr-resources/tests/: builder_tests.rs  rsync_wrapper_tests.rs
docs/: admin-credentials.md  backup-restore.md  configuration.md  contributing.md  examples.md  gpu-scheduling.md  installation.md  networking.md  nfd-gpu-transcoding.md  nfs-volumes.md  troubleshooting.md
docs/examples/: bazarr.yaml  jackett.yaml  jellyfin.yaml  kitchen-sink.yaml  lidarr.yaml  maintainerr.yaml  navidrome.yaml  overseerr.yaml  plex.yaml  poutine.yaml  prowlarr.yaml  radarr.yaml  sabnzbd.yaml  sonarr.yaml  ssh-bastion.yaml  subgen.yaml  tautulli.yaml  transmission.yaml
docs/superpowers/plans/: 2026-04-13-bazarr-subgen.md  2026-04-29-navidrome-poutine.md  2026-06-17-release-process.md
docs/superpowers/specs/: 2026-04-13-bazarr-subgen-support-design.md  2026-04-29-navidrome-poutine-design.md  2026-06-17-release-process-design.md
scripts/: changelog-extract.sh  generate-crds.sh  helm-lint.sh  smoke-test-local.sh  sync-image-defaults.sh
