[workspace]
resolver = "2"
members = [
    "crates/servarr-api",
    "crates/servarr-crds",
    "crates/servarr-resources",
    "crates/servarr-operator",
]

[workspace.package]
version = "1.0.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/phaedrus1992/servarr-operator"

[workspace.dependencies]
kube = { version = "4.0.0", default-features = false, features = ["runtime", "derive", "client", "rustls-tls", "config"] }
k8s-openapi = { version = "0.28.0", features = ["v1_34", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
anyhow = "1.0.102"

servarr-crds = { path = "crates/servarr-crds" }
servarr-resources = { path = "crates/servarr-resources" }
wiremock = "0.6.5"
