[package]
name = "servarr-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2.5.8"
kube.workspace = true
k8s-openapi.workspace = true
overseerr = "0.1"
sonarr = "0.1"
radarr = "0.1"
lidarr = "0.1"
prowlarr = "0.1"

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
