[package]
name = "servarr-crds"
version = "0.1.0"
edition.workspace = true

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap = { version = "2", features = ["serde"] }

[build-dependencies]
toml = "0.9.12"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_yaml.workspace = true
