[package]
name = "servarr-crds"
version.workspace = true
edition.workspace = true

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap = { version = "2.14.0", features = ["serde"] }

[build-dependencies]
toml = "1.1.3"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_yaml.workspace = true
proptest = { workspace = true }
