[package]
name = "servarr-operator"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "servarr-operator"
path = "src/main.rs"

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
servarr-crds.workspace = true
servarr-resources.workspace = true
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.5.0"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
base64 = "0.22.1"
servarr-api = { path = "../servarr-api" }
overseerr = "0.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
cron = "0.16.0"
url = "2.5.8"
rand = "0.10.1"
sha2 = "0.11.0"
md5 = "0.8"

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
http = "1.4.0"
temp-env = "0.3.6"
tower = "0.5.3"
tower-test = "0.4"

