[package]
name = "servarr-operator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "servarr-operator"
path = "src/main.rs"

# Workspace-level release replacements are anchored here (single crate) so they
# run exactly once. Paths are relative to this crate's manifest dir; ../../
# reaches the workspace root. Shared policy lives in /release.toml.
[package.metadata.release]
pre-release-replacements = [
  # Keep a Changelog rollover (cargo-release FAQ pattern).
  { file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
  { file = "../../CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...v{{version}}", exactly = 1 },
  { file = "../../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", exactly = 1 },
  { file = "../../CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
  { file = "../../CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/phaedrus1992/servarr-operator/compare/v{{version}}...HEAD", exactly = 1 },

  # Keep the operator Helm chart version in sync with the release.
  # The CRD chart (servarr-crds) is versioned independently — its version is
  # only bumped when CRD files actually change (schema, validation rules, etc.).
  # Its appVersion is still bumped here to indicate operator compatibility.
  { file = "../../charts/servarr-crds/Chart.yaml", search = "^appVersion: .*$", replace = "appVersion: \"{{version}}\"", exactly = 1 },
  { file = "../../charts/servarr-operator/Chart.yaml", search = "^version: .*$", replace = "version: {{version}}", exactly = 1 },
  { file = "../../charts/servarr-operator/Chart.yaml", search = "^appVersion: .*$", replace = "appVersion: \"{{version}}\"", exactly = 1 },
]

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
servarr-crds.workspace = true
servarr-resources.workspace = true
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.5.0"
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.6.2", features = ["derive"] }
flate2 = "1.1.9"
base64 = "0.22.1"
servarr-api = { path = "../servarr-api" }
overseerr = "0.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
cron = "0.17.0"
url = "2.5.8"
rand = "0.10.2"
sha2 = "0.11.0"
hex = "0.4.3"
md5 = "0.8.1"

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
http = "1.4.2"
temp-env = "0.3.6"
tower = "0.5.3"
tower-test = "0.4"

